# Multiway-Tree-Merge

./: LICENSE  README.md  Usage.md  node.py  pyproject.toml  traversal.py  tree_builder.py
examples/: example.py
src/treemerge/: Usage.md  tree_merger.py
